--- a/styles/flexboxes.css
+++ b/styles/flexboxes.css
@@ -26,3 +26,44 @@
   padding-left: 2rem;
   padding-right: 2rem;
 }
+
+#flex_container_gft {
+  display: flex;
+  flex-direction: row;
+}
+
+#flex_item_gft_1 {
+  padding-top: 1.5rem;
+  width: 33%;
+}
+
+#flex_item_gft_2 {
+  width: 33%;
+  text-align: justify;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+#flex_item_gft_3 {
+  width: 33%;
+  padding-top: 1.5rem;
+}
+
+#flex_container_welcome {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-basis: auto;
+}
+
+#flex_item_welcome_1 {
+  padding: 1rem;
+  width: 49%;
+  text-align: justify;
+}
+
+#flex_item_welcome_2 {
+  padding: 1rem;
+  width: 49%;
+  text-align: justify;
+}
