--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -47,7 +47,6 @@ h3 {
 }
 
 nav {
-  margin-top: 1rem;
   padding: 1rem;
   margin-bottom: 2rem;
   -webkit-box-shadow: 3px 3px 8px 1px rgba(0, 0, 0, 0.29);
@@ -119,4 +118,10 @@ figcaption {
   text-align: center;
   font-size: 80%;
   color: black;
+}
+
+footer p {
+  margin-top: 7rem;
+  font-size: 85%;
+  text-align: center;
 }
