--- a/styles/flexboxes.css
+++ b/styles/flexboxes.css
@@ -5,7 +5,7 @@
 
 #flex_item_thermik_1 {
   width: 50%;
-  text-align: justify;
+  text-align: left;
   padding-left: 2rem;
   padding-right: 2rem;
 }
@@ -22,7 +22,7 @@
 
 #flex_item_slt_1 {
   width: 100%;
-  text-align: justify;
+  text-align: left;
   padding-left: 2rem;
   padding-right: 2rem;
 }
@@ -39,7 +39,7 @@
 
 #flex_item_gft_2 {
   width: 33%;
-  text-align: justify;
+  text-align: left;
   padding-left: 2rem;
   padding-right: 2rem;
 }
@@ -59,11 +59,11 @@
 #flex_item_welcome_1 {
   padding: 1rem;
   width: 49%;
-  text-align: justify;
+  text-align: left;
 }
 
 #flex_item_welcome_2 {
   padding: 1rem;
   width: 49%;
-  text-align: justify;
+  text-align: left;
 }
